template/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: springboot-hello-world2
  name: springboot-hello-world2
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: springboot-hello-world2
